--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Saira:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
+    <meta name="description" content="Web site created using create-react-app"
     />
-    <title>  PUBG.COM.KG- Ежедневние турниры по PUBG Mobile</title>
+	  <!-- WWW.NET.KG , code for http://pubg.com.kg -->
+	  <script language="javascript" type="text/javascript">
+		  java="1.0";
+		  java1=""+"refer="+escape(document.referrer)+"&amp;page="+escape(window.location.href);
+		  document.cookie="astratop=1; path=/";
+		  java1+="&amp;c="+(document.cookie?"yes":"now");
+	  </script>
+	  <script language="javascript1.1" type="text/javascript">
+		  java="1.1";
+		  java1+="&amp;java="+(navigator.javaEnabled()?"yes":"now");
+	  </script>
+	  <script language="javascript1.2" type="text/javascript">
+		  java="1.2";
+		  java1+="&amp;razresh="+screen.width+'x'+screen.height+"&amp;cvet="+
+				  (((navigator.appName.substring(0,3)=="Mic"))?
+						  screen.colorDepth:screen.pixelDepth);
+	  </script>
+	  <script language="javascript1.3" type="text/javascript">java="1.3"</script>
+	  <!-- /WWW.NET.KG -->
+	  <title>  PUBG.COM.KG- Ежедневние турниры по PUBG Mobile</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
